[tool.poetry]
name = "dodevops"
version = "0.1.0"
description = ""
authors = ["Oakwright <abby.oakwright@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydo = "^0.1.4"
python-dotenv = "^1.0.0"
inquirer = "^3.1.3"
botocore = "^1.29.145"
boto3 = "^1.26.145"
cryptography = "^41.0.1"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
protocheckdb = "proto:checkdb"
protogetkeys = "proto:getkeys"
protogetdbcluster = "proto:getdbcluster"
protoselectcluster = "proto:selectcluster"
protoselect_spaces = "proto:select_spaces"
protodeploy = "proto:deploy_app"
start = "dodevops:start"